phase 1-3 done